--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Christopher Voisin</title>
 </head>
 
 <body>
-    <p>Txt1</p>
-    <p>Txt2</p>
-    <p>Txt3</p>
+    <div id="nav">
+        <nav>
+            <ol>
+                <li>Accueil</li>
+                <li>Projet</li>
+            </ol>
+        </nav>
+    </div>
     
  </body>
 
