--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Christopher Voisin</title>
 </head>
 
 <body>
-    <div id="nav">
+    <div id="header">
+        <a href="#"><p>CHRISTOPHER VOISIN</p></a>
         <nav>
             <ol>
-                <li>Accueil</li>
-                <li>Projet</li>
+                <li><a href="#">ACCUEIL</a></li>
+                <li><a href="#">PROJETS</a></li>
             </ol>
         </nav>
+
     </div>
     
  </body>
