--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Christopher Voisin</title>
 </head>
@@ -17,9 +18,54 @@
                 <li><a href="#">PROJETS</a></li>
             </ol>
         </nav>
-
     </div>
-    
- </body>
+    <main>
+        <!-- Lorem ipsum -->
+         <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo iaculis ipsum, eget ornare arcu auctor quis.<br>
+            Suspendisse ac finibus orci. Proin sed ultrices nibh, rhoncus luctus neque. Duis sollicitudin ultrices posuere. Aliquam et mattis ligula.
+            Nulla laoreet dapibus facilisis. Fusce placerat quis ligula quis ornare. Pellentesque vitae ultrices ipsum.<br>
+            In id lacinia tellus. Nam blandit sem et magna malesuada viverra. Sed fermentum ex tortor, nec vehicula augue pellentesque vitae.
+            Mauris tempus varius lacus iaculis elementum.
+            Morbi efficitur scelerisque malesuada. Etiam vitae vestibulum dolor. Sed ante enim, rutrum sit amet malesuada a, finibus et ante.
+            Sed ac diam auctor, gravida quam blandit, vestibulum est.<br>
+            Vestibulum imperdiet vestibulum turpis, nec maximus nisi feugiat hendrerit.<br> Maecenas id ante ac ex venenatis varius nec eu nunc.<br>
+            Ut ut pharetra massa. Pellentesque consectetur nibh at lorem ornare, non laoreet magna suscipit.
+            Praesent lobortis, turpis et malesuada lacinia, metus mauris consequat felis, at sagittis lacus diam viverra lorem. 
+            Vivamus consequat, turpis a pretium commodo, ante metus feugiat urna, maximus facilisis dui orci in lorem. Nunc a bibendum elit.
+            <br> Cras aliquam massa nec lorem sollicitudin dictum. Fusce scelerisque ipsum a mattis fringilla. 
+            Vestibulum tristique tortor eget vestibulum fringilla. Duis dignissim rhoncus tristique.
+            Duis ac porta justo. Donec dictum id ipsum non fringilla.<br> Curabitur efficitur efficitur felis sit amet scelerisque.
+            Sed rhoncus purus efficitur orci consequat malesuada. Curabitur elementum vulputate quam, vel finibus metus dictum in. 
+            Fusce facilisis massa ligula, aliquet commodo mi maximus sed. Mauris et metus laoreet, scelerisque lacus eu, posuere est.
+            In imperdiet egestas lorem, pretium faucibus nibh ullamcorper in. Mauris sit amet sapien ut nisl malesuada sagittis posuere et magna. 
+            Nulla facilisi. Curabitur massa nisl, ultricies id commodo nec, feugiat vel sapien. Vivamus at ultrices lectus, at volutpat arcu.
+            Ut dapibus rutrum cursus. Cras malesuada non magna in porttitor. In condimentum pretium commodo.<br>
+            Nullam tempus lorem at sapien tincidunt, id sodales purus sagittis. Vestibulum ante ipsum primis in faucibus orci
+            luctus et ultrices posuere cubilia curae; Duis et volutpat lacus, in consectetur est. Quisque sed tellus a mauris mollis feugiat. <br>
+            Donec id felis aliquet, tempor tellus quis, cursus ante. Mauris eleifend elit eget odio finibus, quis porta purus pharetra.
+            Ut eu neque sollicitudin, mattis arcu nec, fringilla lacus. Quisque non vehicula quam.
+            Integer vitae nisl sit amet quam sagittis ultrices non vitae metus. Pellentesque quam erat,
+            eleifend vel dapibus nec, aliquet eget nunc. Suspendisse convallis nec felis quis rutrum.
+            <br> Etiam eget nunc vel diam eleifend rutrum. Aenean sit amet ipsum vitae neque malesuada ultrices vel a tellus.
+            <br> Donec vel porta sem, id facilisis odio. Etiam in nulla et augue tristique egestas. Sed id sem aliquam neque venenatis 
+            <br>eleifend non sed nisi. Vestibulum molestie, dui a tincidunt feugiat, dolor mi sollicitudin quam, in fringilla neque lacus
+            <br> sit amet lacus. Quisque pretium eu magna quis facilisis.
+
+        </p>
+    </main>
+    <footer>
+        <div id="logo">
+            <a href="https://www.linkedin.com/in/christopher-voisin/" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+            <a href="https://github.com/ChristopherVsn" target='_blank'><i class="icon ion-social-github"></i></a>
+        </div>
+        <div id="nav">
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Projets</a></li>
+            </ul>
+            <p>Christopher Voisin © </p>
+    </footer>
+</body>
 
 </html>
