Add js on header

--- a/index.html
+++ b/index.html
@@ -20,39 +20,48 @@
         </nav>
     </div>
     <main>
-        <!-- Lorem ipsum -->
-         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo iaculis ipsum, eget ornare arcu auctor quis.<br>
-            Suspendisse ac finibus orci. Proin sed ultrices nibh, rhoncus luctus neque. Duis sollicitudin ultrices posuere. Aliquam et mattis ligula.
-            Nulla laoreet dapibus facilisis. Fusce placerat quis ligula quis ornare. Pellentesque vitae ultrices ipsum.<br>
-            In id lacinia tellus. Nam blandit sem et magna malesuada viverra. Sed fermentum ex tortor, nec vehicula augue pellentesque vitae.
-            Mauris tempus varius lacus iaculis elementum.
-            Morbi efficitur scelerisque malesuada. Etiam vitae vestibulum dolor. Sed ante enim, rutrum sit amet malesuada a, finibus et ante.
-            Sed ac diam auctor, gravida quam blandit, vestibulum est.<br>
-            Vestibulum imperdiet vestibulum turpis, nec maximus nisi feugiat hendrerit.<br> Maecenas id ante ac ex venenatis varius nec eu nunc.<br>
-            Ut ut pharetra massa. Pellentesque consectetur nibh at lorem ornare, non laoreet magna suscipit.
-            Praesent lobortis, turpis et malesuada lacinia, metus mauris consequat felis, at sagittis lacus diam viverra lorem. 
-            Vivamus consequat, turpis a pretium commodo, ante metus feugiat urna, maximus facilisis dui orci in lorem. Nunc a bibendum elit.
-            <br> Cras aliquam massa nec lorem sollicitudin dictum. Fusce scelerisque ipsum a mattis fringilla. 
-            Vestibulum tristique tortor eget vestibulum fringilla. Duis dignissim rhoncus tristique.
-            Duis ac porta justo. Donec dictum id ipsum non fringilla.<br> Curabitur efficitur efficitur felis sit amet scelerisque.
-            Sed rhoncus purus efficitur orci consequat malesuada. Curabitur elementum vulputate quam, vel finibus metus dictum in. 
-            Fusce facilisis massa ligula, aliquet commodo mi maximus sed. Mauris et metus laoreet, scelerisque lacus eu, posuere est.
-            In imperdiet egestas lorem, pretium faucibus nibh ullamcorper in. Mauris sit amet sapien ut nisl malesuada sagittis posuere et magna. 
-            Nulla facilisi. Curabitur massa nisl, ultricies id commodo nec, feugiat vel sapien. Vivamus at ultrices lectus, at volutpat arcu.
-            Ut dapibus rutrum cursus. Cras malesuada non magna in porttitor. In condimentum pretium commodo.<br>
-            Nullam tempus lorem at sapien tincidunt, id sodales purus sagittis. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae; Duis et volutpat lacus, in consectetur est. Quisque sed tellus a mauris mollis feugiat. <br>
-            Donec id felis aliquet, tempor tellus quis, cursus ante. Mauris eleifend elit eget odio finibus, quis porta purus pharetra.
-            Ut eu neque sollicitudin, mattis arcu nec, fringilla lacus. Quisque non vehicula quam.
-            Integer vitae nisl sit amet quam sagittis ultrices non vitae metus. Pellentesque quam erat,
-            eleifend vel dapibus nec, aliquet eget nunc. Suspendisse convallis nec felis quis rutrum.
-            <br> Etiam eget nunc vel diam eleifend rutrum. Aenean sit amet ipsum vitae neque malesuada ultrices vel a tellus.
-            <br> Donec vel porta sem, id facilisis odio. Etiam in nulla et augue tristique egestas. Sed id sem aliquam neque venenatis 
-            <br>eleifend non sed nisi. Vestibulum molestie, dui a tincidunt feugiat, dolor mi sollicitudin quam, in fringilla neque lacus
-            <br> sit amet lacus. Quisque pretium eu magna quis facilisis.
+        <!-- Lorem ipsum to simulate the futur text -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+            Praesent eleifend orci lorem, nec dapibus nibh pulvinar et.<br>
+            Vestibulum quis lectus sit amet metus luctus semper.<br>
+            Phasellus laoreet turpis eu tortor egestas tincidunt.<br>
+            Aenean sit amet maximus mi. In pharetra facilisis nunc, eget aliquet nisl molestie at.<br>
+            Ut quis mi dui. Nam porta ipsum dictum justo vestibulum maximus.<br>
+            Ut id imperdiet urna, vel faucibus leo. Integer placerat dui diam, lacinia porta eros cursus a.<br>
+            Suspendisse potenti. Vivamus id metus vestibulum, faucibus urna et, dapibus nibh.<br>
+            Phasellus accumsan varius imperdiet.<br>
+            <br>
+            Aliquam elementum nec felis ac pharetra. Duis pharetra ante quis elit sollicitudin facilisis quis eget libero.<br>
+            Duis sagittis malesuada nisl, eu fringilla ligula dapibus eu. Aenean ultricies eu risus fringilla molestie.<br>
+            Aenean a venenatis lacus, tempor gravida nisi. Quisque luctus augue a egestas gravida.<br>
+            Fusce fermentum et quam rutrum faucibus. Suspendisse potenti.<br>
+            <br>
+            Etiam dapibus dui sed augue sodales, non lacinia ipsum convallis.<br>
+            In hac habitasse platea dictumst. Nunc nec lectus felis.<br>
+            Pellentesque blandit augue dolor, ut sodales dui bibendum ut.<br>
+            Nam non purus eget sapien aliquet volutpat. Suspendisse sollicitudin tempor pharetra.<br>
+            Cras aliquet fermentum mauris venenatis tincidunt. Suspendisse sollicitudin tempor ullamcorper.<br>
+            Maecenas ut placerat lacus, non efficitur ipsum. Mauris eget arcu euismod, convallis neque sit amet, cursus diam.<br>
+            <br>
+            Vivamus vitae sem massa. Vestibulum tempus eu odio ut viverra.<br>
+            Maecenas viverra urna quis tortor mollis, vel congue lectus imperdiet.<br>
+            Praesent sapien lectus, vulputate sit amet nulla venenatis, venenatis vestibulum felis.<br>
+            Praesent vitae metus eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>
+            Donec egestas mauris magna, sit amet euismod urna molestie vel. Nam eget molestie lectus, ut blandit quam.<br>
+            <br>
+            In mollis dolor erat. Curabitur convallis leo in dolor rhoncus, posuere interdum massa pulvinar.<br>
+            Nulla eleifend elementum nunc vel egestas. Nulla pellentesque lacinia facilisis.<br>
+            Maecenas id pretium dolor. Sed a lacus ac lorem gravida maximus ac et risus.<br>
+            Aliquam volutpat porttitor velit, sit amet venenatis nisl varius et.<br>
+            Aenean tincidunt commodo cursus. Fusce sit amet elementum tortor.<br>
+            Integer mollis, orci in finibus commodo, nisi lacus maximus velit, sit amet aliquet lorem leo ut magna.<br>
+            Mauris eu erat dictum, ultrices arcu a, luctus sapien. Phasellus vitae consectetur metus.<br>
+            Donec enim lorem, vehicula pharetra orci non, dapibus placerat velit.<br>
+            In urna urna, facilisis et maximus in, lobortis in dolor. Fusce non arcu a turpis tempor imperdiet.<br>
+            Nunc facilisis quam erat, quis scelerisque tellus fermentum non.
+            </p>
+        
 
-        </p>
     </main>
     <footer>
         <div id="logo">
@@ -66,6 +75,10 @@
             </ul>
             <p>Christopher Voisin © </p>
     </footer>
+
+
+    <!-- JavaScript -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
