Js | GenerateBubble - #AboutMe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <main>
-        <div id="AboutMe">
+        <div id="aboutMe">
             <h1>Qui suis-je ?</h1>
             <hr id="separator">
             <p>Comme vous le voyez je m'appelle Christopher ! <br>
@@ -31,11 +31,11 @@
             qu'ils soient personnels ou bien professionnels.</p>
         </div>
         <br>
+        <div id="cv">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc purus magna, sagittis quis neque eu, porttitor dapibus dolor. Duis pellentesque sapien et neque ullamcorper, at condimentum tellus tristique. Integer consequat diam at quam fermentum, et vestibulum urna scelerisque. Fusce eu odio turpis. Nunc molestie sapien ac felis posuere, nec ultricies neque accumsan. Integer quis varius augue. Curabitur commodo turpis dolor, vel eleifend lorem dapibus eu. Nunc commodo facilisis libero. Proin aliquam placerat tortor, eu rutrum ante sollicitudin quis. Ut sed libero in tortor blandit bibendum. Sed sodales nisi non ipsum lobortis, vulputate consectetur sapien bibendum. Nam sit amet dapibus ipsum, quis posuere nisl. Aliquam dapibus ac ante a semper. In consectetur orci vel blandit gravida.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc purus magna, sagittis quis neque eu, porttitor dapibus dolor. Duis pellentesque sapien et neque ullamcorper, at condimentum tellus tristique. Integer consequat diam at quam fermentum, et vestibulum urna scelerisque. Fusce eu odio turpis. Nunc molestie sapien ac felis posuere, nec ultricies neque accumsan. Integer quis varius augue. Curabitur commodo turpis dolor, vel eleifend lorem dapibus eu. Nunc commodo facilisis libero. Proin aliquam placerat tortor, eu rutrum ante sollicitudin quis. Ut sed libero in tortor blandit bibendum. Sed sodales nisi non ipsum lobortis, vulputate consectetur sapien bibendum. Nam sit amet dapibus ipsum, quis posuere nisl. Aliquam dapibus ac ante a semper. In consectetur orci vel blandit gravida.</p>
-
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
 
         <div id="timeline">
             <ul>
