Background on #AboutMe

--- a/index.html
+++ b/index.html
@@ -20,23 +20,30 @@
         </nav>
     </div>
     <main>
-        <div id="aboutMe">
-            <h1>Qui suis-je ?</h1>
-            <hr id="separator">
-            <p>Comme vous le voyez je m'appelle Christopher ! <br>
-            J'ai 18 ans, je suis actuellement en deuxième année de
-            <br>BUT Informatique à l'IUT de Paul Sabatier à Toulouse.<br>
-            <br>Je vous présente mon portfolio qui retrace mon parcours.<br>
-            Vous y trouverez mes formations ainsi que mes projets<br>
-            qu'ils soient personnels ou bien professionnels.</p>
+        <div id="aboutMe">   
+            <div id="aboutMe-Content">
+                <h1>Qui suis-je ?</h1>
+                <hr>
+                <p>Comme vous le voyez je m'appelle Christopher ! <br>
+                J'ai 18 ans, je suis actuellement en deuxième année de
+                <br>BUT Informatique à l'IUT de Paul Sabatier à Toulouse.<br>
+                <br>Je vous présente mon portfolio qui retrace mon parcours.<br>
+                Vous y trouverez mes formations ainsi que mes projets<br>
+                qu'ils soient personnels ou bien professionnels.</p>
+            </div>
+            <div id="languages">
+                <p>Mes langages : </p>
+                <ul>
+                    <li><img src="../img/logoJava.png"></li>
+                    <li><img src="../img/logoSQL.png"></li>
+                    <li><img src="../img/logoHTML.png"></li>
+                    <li><img src="../img/logoCSS.png"></li>
+                    <li><img src="../img/logoPHP.png"></li>
+                    <li><img src="../img/logoC.png"></li>
+                </ul>
+            </div>    
         </div>
         <br>
-        <div id="cv">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc purus magna, sagittis quis neque eu, porttitor dapibus dolor. Duis pellentesque sapien et neque ullamcorper, at condimentum tellus tristique. Integer consequat diam at quam fermentum, et vestibulum urna scelerisque. Fusce eu odio turpis. Nunc molestie sapien ac felis posuere, nec ultricies neque accumsan. Integer quis varius augue. Curabitur commodo turpis dolor, vel eleifend lorem dapibus eu. Nunc commodo facilisis libero. Proin aliquam placerat tortor, eu rutrum ante sollicitudin quis. Ut sed libero in tortor blandit bibendum. Sed sodales nisi non ipsum lobortis, vulputate consectetur sapien bibendum. Nam sit amet dapibus ipsum, quis posuere nisl. Aliquam dapibus ac ante a semper. In consectetur orci vel blandit gravida.</p>
-
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        </div>
-
         <div id="timeline">
             <ul>
                 <div class="timeline-block timeline-block-right">
@@ -79,17 +86,14 @@
 
     </main>
     <footer>
-        <div id="logo">
-            <a href="https://www.linkedin.com/in/christopher-voisin/" target="_blank"><i class="icon ion-social-linkedin"></i></a>
-            <a href="https://github.com/ChristopherVsn" target='_blank'><i class="icon ion-social-github"></i></a>
-            <a href="mailto:christopher.voisin1@gmail.com"><img id="logoMail" src="img/logoMail.png"></a>
-        </div>
-        <div id="nav">
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Projets</a></li>
-            </ul>
-            <p>Christopher Voisin © </p>
+        <a href="https://www.linkedin.com/in/christopher-voisin/" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+        <a href="https://github.com/ChristopherVsn" target='_blank'><i class="icon ion-social-github"></i></a>
+        <a href="mailto:christopher.voisin1@gmail.com"><img id="logoMail" src="img/logoMail.png"></a>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Projets</a></li>
+        </ul>
+        <p>Christopher Voisin © </p>
     </footer>
 
 
